--- a/Web/Resources/Pages/CCGMember/Details.resx
+++ b/Web/Resources/Pages/CCGMember/Details.resx
@@ -120,17 +120,20 @@
   <data name="altPhotoMap" xml:space="preserve">
     <value>Image of the CCG Regions</value>
   </data>
-  <data name="ArcticRegion" xml:space="preserve">
-    <value>The Arctic Region is inclusive of the Yukon North slope, Northwest  Territories, Nunavut, Nunavik, Nunatsiavut, and Hudson and James Bay. This  boundary is inclusive of Inuit Nunangat.</value>
+  <data name="Arctic" xml:space="preserve">
+    <value>&lt;b&gt;Arctic:&lt;/b&gt; &lt;small style="font-weight:normal;"&gt;The Arctic Region is inclusive of the Yukon North slope, Northwest  Territories, Nunavut, Nunavik, Nunatsiavut, and Hudson and James Bay. This  boundary is inclusive of Inuit Nunangat.&lt;/small&gt;</value>
   </data>
-  <data name="AtlanticRegion" xml:space="preserve">
-    <value>The Atlantic Region consists of New Brunswick, Nova Scotia,  Prince Edward Island, and Newfoundland and Labrador, minus the Nunatsiavut  region in Labrador.</value>
+  <data name="Atlantic" xml:space="preserve">
+    <value>&lt;b&gt;Atlantic:&lt;/b&gt; &lt;small style="font-weight:normal;"&gt;The Atlantic Region consists of New Brunswick, Nova Scotia,  Prince Edward Island, and Newfoundland and Labrador, minus the Nunatsiavut region in Labrador.&lt;/small&gt;</value>
   </data>
   <data name="BEHAVIOURAL ELEMENTS" xml:space="preserve">
     <value>BEHAVIOURAL ELEMENTS: &lt;small style="font-weight:normal;"&gt;Behaviour elements are the behaviours or attitudes needed for any job with the Canadian Coast Guard. We identified 7 and included a level of competency required for each job.&lt;/small&gt;</value>
   </data>
-  <data name="CentralRegion" xml:space="preserve">
-    <value>The Central Region consists of  Ontario and Quebec, minus the Nunavik region in northern Quebec.</value>
+  <data name="CCG College" xml:space="preserve">
+    <value>&lt;b&gt;CCG College:&lt;/b&gt; &lt;small style="font-weight:normal;"&gt;The Canadian Coast Guard College is a national maritime training facility located on Cape Breton Island, Nova Scotia. It delivers programs in French and English to support the College’s mission and mandate in marine safety, security and environmental protection.&lt;/small&gt;</value>
+  </data>
+  <data name="Central" xml:space="preserve">
+    <value>&lt;b&gt;Central:&lt;/b&gt; &lt;small style="font-weight:normal;"&gt;The Central Region consists of  Ontario and Quebec, minus the Nunavik region in northern Quebec.&lt;/small&gt;</value>
   </data>
   <data name="CERTIFICATIONS" xml:space="preserve">
     <value>CERTIFICATIONS</value>
@@ -138,17 +141,11 @@
   <data name="Close" xml:space="preserve">
     <value>Close</value>
   </data>
-  <data name="CollegeRegion" xml:space="preserve">
-    <value>The Canadian Coast Guard College is a national maritime training facility located on Cape Breton Island, Nova Scotia. It delivers programs in French and English to support the College’s mission and mandate in marine safety, security and environmental protection.</value>
-  </data>
   <data name="Commanding Officer" xml:space="preserve">
     <value>COMMANDING OFFICER</value>
   </data>
   <data name="Current Position Details" xml:space="preserve">
     <value>Current Position Details</value>
-  </data>
-  <data name="HeadQRegion" xml:space="preserve">
-    <value>The Canadian Coast Guard (CCG) National Headquarters is located in Ottawa, Ontario.</value>
   </data>
   <data name="KNOWLEDGE ELEMENTS" xml:space="preserve">
     <value>KNOWLEDGE ELEMENTS: &lt;small style="font-weight:normal;"&gt;Knowledge elements are practical or theoretical understanding of a subject. It is the information you need (from past experience or education) to succeed in the position.&lt;/small&gt;</value>
@@ -186,6 +183,9 @@
   <data name="modalTitleMap" xml:space="preserve">
     <value>CCG Regions Map</value>
   </data>
+  <data name="National Headquarters" xml:space="preserve">
+    <value>&lt;b&gt;National Headquarters:&lt;/b&gt; &lt;small style="font-weight:normal;"&gt;The Canadian Coast Guard (CCG) National Headquarters is located in Ottawa, Ontario.&lt;/small&gt;</value>
+  </data>
   <data name="Next" xml:space="preserve">
     <value>Next</value>
   </data>
@@ -216,7 +216,7 @@
   <data name="USERACTION" xml:space="preserve">
     <value>Click Next to compare or find similar positions within the organization to your selected position below.</value>
   </data>
-  <data name="WesternRegion" xml:space="preserve">
-    <value>The Western Region consists of  British Columbia, Alberta, Saskatchewan, Manitoba and Yukon, minus the Yukon slope.</value>
+  <data name="Western" xml:space="preserve">
+    <value>&lt;b&gt;Western:&lt;/b&gt; &lt;small style="font-weight:normal;"&gt;The Western Region consists of  British Columbia, Alberta, Saskatchewan, Manitoba and Yukon, minus the Yukon slope.&lt;/small&gt;</value>
   </data>
 </root>
