--- a/Web/Resources/Pages/CCGMember/Similar/SimilarSearch.resx
+++ b/Web/Resources/Pages/CCGMember/Similar/SimilarSearch.resx
@@ -135,17 +135,17 @@
   <data name="Current Position Level" xml:space="preserve">
     <value>Current Position Level</value>
   </data>
-  <data name="h1Text" xml:space="preserve">
-    <value>Similar Position Search</value>
-  </data>
   <data name="h2Text" xml:space="preserve">
     <value>Select a competency to add to your current profile</value>
   </data>
-  <data name="h4Text" xml:space="preserve">
-    <value>Select all or some of the competencies and ratings below to obtain positions similar to your current position.</value>
-  </data>
   <data name="LimitReached" xml:space="preserve">
     <value>Limit has been reached.</value>
+  </data>
+  <data name="modalsimilar" xml:space="preserve">
+    <value>&lt;p&gt;This feature allows you to find positions similar to the one you’ve already selected. The search will yield percentage results by functionality (e.g. engineering, administrative, logistics, etc.). Results may not be at the same pay level as the position you’ve already selected.&lt;/p&gt;
+&lt;p&gt;If the position you’re comparing to (i.e. the position you’ve already selected) has certificates associated with it, there will be a box offering you to click the certificates. If you click one or more, the similar search will yield positions with those certifications, regardless of level.&lt;/p&gt;
+&lt;p&gt;If you don’t select a certificate or the position you’re comparing to doesn’t have a certificate associated with it, you may simply click a percentage match. Clicking on 100% will yield results at the same classification, level, and levels below and above. If you click other percentages, the results will be positions of similar functionality, but not level.&lt;/p&gt;
+&lt;p&gt;If you click a certification AND a percentage, the similar search will only yield positions with those certifications, regardless of level.&lt;/p&gt;</value>
   </data>
   <data name="No Certifications Found" xml:space="preserve">
     <value>No Certifications Found</value>
@@ -176,6 +176,9 @@
   </data>
   <data name="SelectionTitleCertificates" xml:space="preserve">
     <value>Select one or more certificates, if appropriate, to narrow your search for positions similar to your current position.</value>
+  </data>
+  <data name="Similar Function" xml:space="preserve">
+    <value>Similar Search Function</value>
   </data>
   <data name="Submit" xml:space="preserve">
     <value>Submit</value>
