--- a/Web/Resources/Pages/Index.fr.resx
+++ b/Web/Resources/Pages/Index.fr.resx
@@ -117,39 +117,61 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Certifications" xml:space="preserve">
-    <value>Attestations</value>
+  <data name="brief" xml:space="preserve">
+    <value>Un bref aperçu de l'outil de compétences professionnelles.</value>
   </data>
-  <data name="CertText" xml:space="preserve">
-    <value>Les attestations indiquent qu’un programme de formation donné a été suivi avec succès. Certaines attestations peuvent varier ou changer, même à un niveau de classification similaire.</value>
+  <data name="Close" xml:space="preserve">
+    <value>Fermer</value>
   </data>
-  <data name="Competencies" xml:space="preserve">
-    <value>Compétences</value>
+  <data name="Email" xml:space="preserve">
+    <value>Courriel</value>
   </data>
-  <data name="CompText" xml:space="preserve">
-    <value>&lt;p&gt;Nous avons compilé ces renseignements à partir des compétences mentionnées dans toutes les offres d’emploi des dernières années. Chaque compétence a un niveau minimum requis pour le poste. Les compétences peuvent évoluer au fur et à mesure que les exigences des postes changent au sein de la Garde côtière.&lt;/p&gt;
-&lt;p&gt;Nous avons divisé les compétences liées aux postes en trois sections :&lt;/p&gt;
-&lt;ul&gt;&lt;li&gt;Les éléments de connaissance sont une compréhension pratique ou théorique d’un sujet. Il s’agit des renseignements dont vous avez besoin (à partir de votre expérience ou de vos études) pour réussir dans le poste.&lt;/li&gt;
-&lt;li&gt;Les éléments techniques décrivent les capacités d’appliquer les connaissances pour exécuter efficacement le travail.&lt;/li&gt;
-&lt;li&gt;Les éléments de comportement sont les comportements ou les attitudes nécessaires pour tout emploi au sein de la Garde côtière canadienne. Nous en avons déterminé sept (7) et inclus un niveau de compétence requis pour chaque poste.&lt;/li&gt;&lt;/ul&gt;</value>
+  <data name="external" xml:space="preserve">
+    <value>Candidat externe</value>
   </data>
-  <data name="continue" xml:space="preserve">
-    <value>Cliquez ici pour commencer</value>
+  <data name="externalsearch" xml:space="preserve">
+    <value>Si vous êtes un candidat externe, vous pouvez commencer votre recherche ici.</value>
   </data>
-  <data name="Intro" xml:space="preserve">
-    <value>Introduction</value>
+  <data name="feedback" xml:space="preserve">
+    <value>Rétroaction</value>
   </data>
-  <data name="IntroText" xml:space="preserve">
-    <value>&lt;p&gt;L’outil de compétences professionnelles de la Garde côtière canadienne est un outil en ligne qui fournit des renseignements sur les exigences des postes dans l’ensemble de la Garde côtière. Il s’adresse aux employés actuels de la Garde côtière et aux personnes qui souhaiteraient travailler pour la Garde côtière canadienne. Pour les membres de la Garde côtière, l’outil vous permet de prendre en main votre perfectionnement professionnel.&lt;/p&gt;
-&lt;p&gt;Une fois que vous avez identifié un poste pouvant vous intéresser, l’outil vous permet de trouver des postes similaires au sein de la Garde côtière ou de comparer les exigences du poste à celles d’autres postes. Pour chaque poste, l’outil fournit :&lt;/p&gt;&lt;ul&gt;&lt;li&gt;une brève description;&lt;/li&gt;
-&lt;li&gt;les régions dans lesquelles on peut trouver ce poste;&lt;/li&gt;
-&lt;li&gt;les certifications requises pour le poste;&lt;/li&gt;
-&lt;li&gt;une liste des compétences nécessaires ainsi que le niveau de compétence requis.&lt;/li&gt;&lt;/ul&gt;</value>
+  <data name="feedbacktext" xml:space="preserve">
+    <value>Pour nous envoyer vos rétroaction ou commentaires sur l'outil de compétences professionnelles</value>
   </data>
-  <data name="Title" xml:space="preserve">
-    <value>L’outil de compétences professionnelles</value>
+  <data name="H1" xml:space="preserve">
+    <value>Garde côtière canadienne&lt;br /&gt;L’outil de compétences professionnelles</value>
   </data>
-  <data name="You are here:" xml:space="preserve">
-    <value>Vous êtes ici :</value>
+  <data name="Home" xml:space="preserve">
+    <value>Accueil</value>
+  </data>
+  <data name="intro" xml:space="preserve">
+    <value>L’outil de compétences professionnelles de la Garde côtière canadienne est un outil en ligne qui fournit des renseignements sur les exigences des postes dans l’ensemble de la Garde côtière.</value>
+  </data>
+  <data name="intro-2" xml:space="preserve">
+    <value>Il s’adresse aux employés actuels de la Garde côtière et aux personnes qui souhaiteraient travailler pour la Garde côtière canadienne. Pour les membres de la Garde côtière, l’outil vous permet de prendre en main votre perfectionnement professionnel.</value>
+  </data>
+  <data name="member" xml:space="preserve">
+    <value>Membre de la Garde côtière</value>
+  </data>
+  <data name="membersearch" xml:space="preserve">
+    <value>Si vous êtes membre de la GCC, vous pouvez commencer votre recherche ici.</value>
+  </data>
+  <data name="Overview" xml:space="preserve">
+    <value>Aperçu</value>
+  </data>
+  <data name="services" xml:space="preserve">
+    <value>Services et renseignements</value>
+  </data>
+  <data name="sharebutton" xml:space="preserve">
+    <value>Partagez cette page</value>
+  </data>
+  <data name="sharetext" xml:space="preserve">
+    <value>Aucun appui n’est accordé, soit de façon expresse ou tacite, à aucun produit ou service.</value>
+  </data>
+  <data name="student" xml:space="preserve">
+    <value>Étudiant</value>
+  </data>
+  <data name="studentsearch" xml:space="preserve">
+    <value>Si vous êtes étudiant, vous pouvez commencer votre recherche ici.</value>
   </data>
 </root>
