--- a/Web/Resources/Pages/Index.resx
+++ b/Web/Resources/Pages/Index.resx
@@ -117,39 +117,55 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Certifications" xml:space="preserve">
-    <value>Certifications</value>
+  <data name="brief" xml:space="preserve">
+    <value>A brief overview of the Career Competency Tool.</value>
   </data>
-  <data name="CertText" xml:space="preserve">
-    <value>Certifications indicate having successfully completed a given training program. Some certifications may vary or change, even across the same classification level.</value>
+  <data name="external" xml:space="preserve">
+    <value>External Candidate</value>
   </data>
-  <data name="Competencies" xml:space="preserve">
-    <value>Competencies</value>
+  <data name="externalsearch" xml:space="preserve">
+    <value>If you are an external candidate, you can begin your search here.</value>
   </data>
-  <data name="CompText" xml:space="preserve">
-    <value>&lt;p&gt;We compiled this information from the competencies included in all job posters for the past few years. Each competency has a minimum level of proficiency needed for the position. The competencies may evolve as job requirements change within the coast guard.&lt;/p&gt;
-&lt;p&gt;We divided job competencies into three sections:&lt;/p&gt;
-&lt;ul&gt;&lt;li&gt;Knowledge elements are practical or theoretical understanding of a subject. It is the information you need (from past experience or education) to succeed in the position.&lt;/li&gt;
-&lt;li&gt;Technical elements describe abilities to apply knowledge to efficiently perform the job.&lt;/li&gt;
-&lt;li&gt;Behaviour elements are the behaviours or attitudes needed for any job with the Canadian Coast Guard. We identified 7 and included a level of competency required for each job.&lt;/li&gt;&lt;/ul&gt;</value>
+  <data name="feedback" xml:space="preserve">
+    <value>Feedback</value>
   </data>
-  <data name="continue" xml:space="preserve">
-    <value>Click here to begin</value>
+  <data name="feedbacktext" xml:space="preserve">
+    <value>To send us your feedback or comments on the Career Competency Tool</value>
   </data>
-  <data name="Intro" xml:space="preserve">
-    <value>Introduction</value>
+  <data name="H1" xml:space="preserve">
+    <value>Canadian Coast Guard&lt;br /&gt;Career Competency Tool</value>
   </data>
-  <data name="IntroText" xml:space="preserve">
-    <value>&lt;p&gt;The Canadian Coast Guard’s career competency tool is an online tool that provides information about the requirements for jobs across the coast guard. The tool is for both existing coast guard employees and those interested in working for the Canadian Coast Guard. For coast guard members, the tool empowers you to take charge of your own career development.&lt;/p&gt;
-&lt;p&gt;Once you identify a position, the tool also allows you to find similar positions or compare the job requirements to other positions within the coast guard. For each position, the tool provides:&lt;/p&gt;&lt;ul&gt;&lt;li&gt;a brief description&lt;/li&gt;
-&lt;li&gt;the regions with the position&lt;/li&gt;
-&lt;li&gt;certifications required for the position&lt;/li&gt;
-&lt;li&gt;a list of necessary competencies along with the level of proficiency required&lt;/li&gt;&lt;/ul&gt;</value>
+  <data name="Home" xml:space="preserve">
+    <value>Home</value>
   </data>
-  <data name="Title" xml:space="preserve">
-    <value>Career Competency Tool</value>
+  <data name="intro" xml:space="preserve">
+    <value>The Canadian Coast Guard’s career competency tool is an online tool that provides information about the requirements for jobs across the coast guard.</value>
   </data>
-  <data name="You are here:" xml:space="preserve">
-    <value />
+  <data name="intro-2" xml:space="preserve">
+    <value>The tool is for both existing coast guard employees and those interested in working for the Canadian Coast Guard. For coast guard members, the tool empowers you to take charge of your own career development.</value>
+  </data>
+  <data name="member" xml:space="preserve">
+    <value>Coast Guard Member</value>
+  </data>
+  <data name="membersearch" xml:space="preserve">
+    <value>If you are a CCG member, you can begin your search here.</value>
+  </data>
+  <data name="Overview" xml:space="preserve">
+    <value>Overview</value>
+  </data>
+  <data name="services" xml:space="preserve">
+    <value>Services and information</value>
+  </data>
+  <data name="sharebutton" xml:space="preserve">
+    <value>Share this page</value>
+  </data>
+  <data name="sharetext" xml:space="preserve">
+    <value>No endorsement of any products or services is expressed or implied.</value>
+  </data>
+  <data name="student" xml:space="preserve">
+    <value>Student</value>
+  </data>
+  <data name="studentsearch" xml:space="preserve">
+    <value>If you are an student, you can begin your search here.</value>
   </data>
 </root>
