--- a/Web/Resources/Pages/Overview.resx
+++ b/Web/Resources/Pages/Overview.resx
@@ -117,127 +117,39 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Administrative" xml:space="preserve">
-    <value>Administratif</value>
+  <data name="Certifications" xml:space="preserve">
+    <value>Certifications</value>
   </data>
-  <data name="AllPositions" xml:space="preserve">
-    <value>Choisissez une position à comparer</value>
+  <data name="CertText" xml:space="preserve">
+    <value>Certifications indicate having successfully completed a given training program. Some certifications may vary or change, even across the same classification level.</value>
   </data>
-  <data name="Business" xml:space="preserve">
-    <value>Affaires</value>
+  <data name="Competencies" xml:space="preserve">
+    <value>Competencies</value>
   </data>
-  <data name="Candidate" xml:space="preserve">
-    <value>Candidat externe</value>
+  <data name="CompText" xml:space="preserve">
+    <value>&lt;p&gt;We compiled this information from the competencies included in all job posters for the past few years. Each competency has a minimum level of proficiency needed for the position. The competencies may evolve as job requirements change within the coast guard.&lt;/p&gt;
+&lt;p&gt;We divided job competencies into three sections:&lt;/p&gt;
+&lt;ul&gt;&lt;li&gt;Knowledge elements are practical or theoretical understanding of a subject. It is the information you need (from past experience or education) to succeed in the position.&lt;/li&gt;
+&lt;li&gt;Technical elements describe abilities to apply knowledge to efficiently perform the job.&lt;/li&gt;
+&lt;li&gt;Behaviour elements are the behaviours or attitudes needed for any job with the Canadian Coast Guard. We identified 7 and included a level of competency required for each job.&lt;/li&gt;&lt;/ul&gt;</value>
   </data>
-  <data name="Categories" xml:space="preserve">
-    <value>Catégories</value>
+  <data name="continue" xml:space="preserve">
+    <value>Click here to begin</value>
   </data>
-  <data name="Compare" xml:space="preserve">
-    <value>Comparer</value>
+  <data name="Intro" xml:space="preserve">
+    <value>Introduction</value>
   </data>
-  <data name="Compare Function" xml:space="preserve">
-    <value>La fonction de comparaison</value>
+  <data name="IntroText" xml:space="preserve">
+    <value>&lt;p&gt;The Canadian Coast Guard’s career competency tool is an online tool that provides information about the requirements for jobs across the coast guard. The tool is for both existing coast guard employees and those interested in working for the Canadian Coast Guard. For coast guard members, the tool empowers you to take charge of your own career development.&lt;/p&gt;
+&lt;p&gt;Once you identify a position, the tool also allows you to find similar positions or compare the job requirements to other positions within the coast guard. For each position, the tool provides:&lt;/p&gt;&lt;ul&gt;&lt;li&gt;a brief description&lt;/li&gt;
+&lt;li&gt;the regions with the position&lt;/li&gt;
+&lt;li&gt;certifications required for the position&lt;/li&gt;
+&lt;li&gt;a list of necessary competencies along with the level of proficiency required&lt;/li&gt;&lt;/ul&gt;</value>
   </data>
-  <data name="Computer Systems" xml:space="preserve">
-    <value>Ordinateurs</value>
+  <data name="Title" xml:space="preserve">
+    <value>Career Competency Tool</value>
   </data>
-  <data name="Cook" xml:space="preserve">
-    <value>Cuisinier</value>
-  </data>
-  <data name="Crew" xml:space="preserve">
-    <value>Équipage</value>
-  </data>
-  <data name="Current Position" xml:space="preserve">
-    <value>Poste actuelle</value>
-  </data>
-  <data name="Deck" xml:space="preserve">
-    <value>Pont</value>
-  </data>
-  <data name="Electrical" xml:space="preserve">
-    <value>Électrique</value>
-  </data>
-  <data name="Electronics" xml:space="preserve">
-    <value>Électronique</value>
-  </data>
-  <data name="Engineering" xml:space="preserve">
-    <value>Ingénierie</value>
-  </data>
-  <data name="Filter" xml:space="preserve">
-    <value>Filtrer</value>
-  </data>
-  <data name="General Arts" xml:space="preserve">
-    <value>Arts généraux</value>
-  </data>
-  <data name="geo" xml:space="preserve">
-    <value>Information géographique</value>
-  </data>
-  <data name="HighSchool" xml:space="preserve">
-    <value>École secondaire</value>
-  </data>
-  <data name="Home" xml:space="preserve">
-    <value>Accueil</value>
-  </data>
-  <data name="Logistics" xml:space="preserve">
-    <value>Logistique</value>
-  </data>
-  <data name="modalcompare" xml:space="preserve">
-    <value>&lt;p&gt;Cette fonction vous permet de comparer votre poste actuellement sélectionné avec tout autre poste de la Garde côtière canadienne. En le sélectionnant, puis en un autre poste, la fonction produira les deux résultats de poste côte à côte afin que vous puissiez voir les différences d'emplacement, de certification, de compétences et d'évaluation. Si le poste auquel vous vous comparez est celui que vous recherchez, vous pouvez alors télécharger les résultats, les sauvegarder ou les imprimer, comme base d'un plan de formation.&lt;/p&gt;</value>
-  </data>
-  <data name="NoResults" xml:space="preserve">
-    <value>Aucun résultat correspondant trouvé</value>
-  </data>
-  <data name="Officer" xml:space="preserve">
-    <value>Officier</value>
-  </data>
-  <data name="Position Level" xml:space="preserve">
-    <value>Niveau du poste</value>
-  </data>
-  <data name="Position List" xml:space="preserve">
-    <value>Liste des postes</value>
-  </data>
-  <data name="Previous" xml:space="preserve">
-    <value>Précédent</value>
-  </data>
-  <data name="Save PDF" xml:space="preserve">
-    <value>Enregistrer le PDF</value>
-  </data>
-  <data name="Sciences" xml:space="preserve">
-    <value>Les sciences</value>
-  </data>
-  <data name="Seagoing" xml:space="preserve">
-    <value>Positions en mer</value>
-  </data>
-  <data name="Search Type" xml:space="preserve">
-    <value>Type de recherche</value>
-  </data>
-  <data name="Select" xml:space="preserve">
-    <value>Sélectionnez</value>
-  </data>
-  <data name="Selected Position" xml:space="preserve">
-    <value>Position sélectionnée</value>
-  </data>
-  <data name="Selected Position Level" xml:space="preserve">
-    <value>Niveau de position sélectionné</value>
-  </data>
-  <data name="Shoreside" xml:space="preserve">
-    <value>Positions côté rivage</value>
-  </data>
-  <data name="Similar Positions" xml:space="preserve">
-    <value>Postes similaires</value>
-  </data>
-  <data name="Social Sciences" xml:space="preserve">
-    <value>Science sociale</value>
-  </data>
-  <data name="Student" xml:space="preserve">
-    <value>Étudiant</value>
-  </data>
-  <data name="TechCollege" xml:space="preserve">
-    <value>Collège technique</value>
-  </data>
-  <data name="Trades" xml:space="preserve">
-    <value>Métiers généraux</value>
-  </data>
-  <data name="University" xml:space="preserve">
-    <value>Université</value>
+  <data name="You are here:" xml:space="preserve">
+    <value />
   </data>
 </root>
