Position and Comm layout updates

--- a/Web/Resources/Pages/CCGMember/Compare/ObjectivePosition.fr.resx
+++ b/Web/Resources/Pages/CCGMember/Compare/ObjectivePosition.fr.resx
@@ -130,7 +130,7 @@
     <value>Catégories</value>
   </data>
   <data name="Compare" xml:space="preserve">
-    <value>Comparer</value>
+    <value>Comparer les positions</value>
   </data>
   <data name="Cook" xml:space="preserve">
     <value>Cuisinier</value>
