--- a/Web/Resources/Pages/CCGMember/Compare/ObjectivePosition.resx
+++ b/Web/Resources/Pages/CCGMember/Compare/ObjectivePosition.resx
@@ -121,7 +121,7 @@
     <value>External Candidate</value>
   </data>
   <data name="Compare" xml:space="preserve">
-    <value>Compare</value>
+    <value>Compare Positions</value>
   </data>
   <data name="Current Position" xml:space="preserve">
     <value>Current Position</value>
