--- a/Web/Resources/Pages/Candidate/Shoreside/SimilarDetails.fr.resx
+++ b/Web/Resources/Pages/Candidate/Shoreside/SimilarDetails.fr.resx
@@ -142,7 +142,7 @@
     <value>Fermer</value>
   </data>
   <data name="Collège de la GCC" xml:space="preserve">
-    <value>&lt;b&gt;Collège de la GCC ;&lt;/b&gt; &lt;small style="font-weight:normal;"&gt;Le Collège de la Garde côtière canadienne est une installation de formation maritime nationale qui se trouve sur l'île du Cap-Breton, en Nouvelle-Écosse. Il offre des programmes en français et en anglais à l’appui de sa mission et de son mandat en matière de sûreté et de sécurité maritimes et de protection de l’environnement.&lt;/small&gt;</value>
+    <value>&lt;b&gt;Collège de la GCC :&lt;/b&gt; &lt;small style="font-weight:normal;"&gt;Le Collège de la Garde côtière canadienne est une installation de formation maritime nationale qui se trouve sur l'île du Cap-Breton, en Nouvelle-Écosse. Il offre des programmes en français et en anglais à l’appui de sa mission et de son mandat en matière de sûreté et de sécurité maritimes et de protection de l’environnement.&lt;/small&gt;</value>
   </data>
   <data name="Compare" xml:space="preserve">
     <value>Comparer</value>
