--- a/Web/Resources/Pages/CCGMember/Similar/SimilarDetails.resx
+++ b/Web/Resources/Pages/CCGMember/Similar/SimilarDetails.resx
@@ -120,11 +120,11 @@
   <data name="altPhotoMap" xml:space="preserve">
     <value>Image of the CCG Regions</value>
   </data>
-  <data name="ArcticRegion" xml:space="preserve">
-    <value>The Arctic Region is inclusive of the Yukon North slope, Northwest  Territories, Nunavut, Nunavik, Nunatsiavut, and Hudson and James Bay. This  boundary is inclusive of Inuit Nunangat.</value>
+  <data name="Arctic" xml:space="preserve">
+    <value>&lt;b&gt;Arctic:&lt;/b&gt; &lt;small style="font-weight:normal;"&gt;The Arctic Region is inclusive of the Yukon North slope, Northwest  Territories, Nunavut, Nunavik, Nunatsiavut, and Hudson and James Bay. This  boundary is inclusive of Inuit Nunangat.&lt;/small&gt;</value>
   </data>
-  <data name="AtlanticRegion" xml:space="preserve">
-    <value>The Atlantic Region consists of New Brunswick, Nova Scotia,  Prince Edward Island, and Newfoundland and Labrador, minus the Nunatsiavut region in Labrador.</value>
+  <data name="Atlantic" xml:space="preserve">
+    <value>&lt;b&gt;Atlantic:&lt;/b&gt; &lt;small style="font-weight:normal;"&gt;The Atlantic Region consists of New Brunswick, Nova Scotia,  Prince Edward Island, and Newfoundland and Labrador, minus the Nunatsiavut region in Labrador.&lt;/small&gt;</value>
   </data>
   <data name="BEHAVIOURAL ELEMENTS" xml:space="preserve">
     <value>BEHAVIOURAL ELEMENTS: &lt;small style="font-weight:normal;"&gt;Behaviour elements are the behaviours or attitudes needed for any job with the Canadian Coast Guard. We identified 7 and included a level of competency required for each job.&lt;/small&gt;</value>
@@ -132,11 +132,11 @@
   <data name="Candidate" xml:space="preserve">
     <value>External Candidate</value>
   </data>
-  <data name="CentralRegion" xml:space="preserve">
-    <value>The Central Region consists of  Ontario and Quebec, minus the Nunavik region in northern Quebec.</value>
+  <data name="CCG College" xml:space="preserve">
+    <value>&lt;b&gt;CCG College:&lt;/b&gt; &lt;small style="font-weight:normal;"&gt;The Canadian Coast Guard College is a national maritime training facility located on Cape Breton Island, Nova Scotia. It delivers programs in French and English to support the College’s mission and mandate in marine safety, security and environmental protection.&lt;/small&gt;</value>
   </data>
-  <data name="CollegeRegion" xml:space="preserve">
-    <value>The Canadian Coast Guard College is a national maritime training facility located on Cape Breton Island, Nova Scotia. It delivers programs in French and English to support the College’s mission and mandate in marine safety, security and environmental protection.</value>
+  <data name="Central" xml:space="preserve">
+    <value>&lt;b&gt;Central:&lt;/b&gt; &lt;small style="font-weight:normal;"&gt;The Central Region consists of  Ontario and Quebec, minus the Nunavik region in northern Quebec.&lt;/small&gt;</value>
   </data>
   <data name="Commanding Officer" xml:space="preserve">
     <value>COMMANDING OFFICER</value>
@@ -149,9 +149,6 @@
   </data>
   <data name="geo" xml:space="preserve">
     <value>Geographical Information</value>
-  </data>
-  <data name="HeadQRegion" xml:space="preserve">
-    <value>The Canadian Coast Guard (CCG) National Headquarters is located in Ottawa, Ontario.</value>
   </data>
   <data name="Home" xml:space="preserve">
     <value>Home</value>
@@ -167,9 +164,6 @@
   </data>
   <data name="MAOtext" xml:space="preserve">
     <value>Ship command positions differ additionally, and significantly, dependent on platform size, power, program, and length of time on a given platform.</value>
-  </data>
-  <data name="mapSummary" xml:space="preserve">
-    <value>Text version</value>
   </data>
   <data name="MCTSdesc" xml:space="preserve">
     <value>The Marine Communications and Traffic Services (MCTS) training program is offered in 2 phases. Phase I teaches you the basics of performing the job of an officer and during Phase II you'll learn local geography and regional procedures, while applying the national standards learned in Phase I. For more information about the MCTS program click on the link below.</value>
@@ -191,6 +185,9 @@
   </data>
   <data name="modalTitleMap" xml:space="preserve">
     <value>CCG Regions Map</value>
+  </data>
+  <data name="National Headquarters" xml:space="preserve">
+    <value>&lt;b&gt;National Headquarters:&lt;/b&gt; &lt;small style="font-weight:normal;"&gt;The Canadian Coast Guard (CCG) National Headquarters is located in Ottawa, Ontario.&lt;/small&gt;</value>
   </data>
   <data name="noregion" xml:space="preserve">
     <value>No regions available</value>
@@ -222,7 +219,7 @@
   <data name="University" xml:space="preserve">
     <value>University</value>
   </data>
-  <data name="WesternRegion" xml:space="preserve">
-    <value>The Western Region consists of  British Columbia, Alberta, Saskatchewan, Manitoba and Yukon, minus the Yukon slope.</value>
+  <data name="Western" xml:space="preserve">
+    <value>&lt;b&gt;Western:&lt;/b&gt; &lt;small style="font-weight:normal;"&gt;The Western Region consists of  British Columbia, Alberta, Saskatchewan, Manitoba and Yukon, minus the Yukon slope.&lt;/small&gt;</value>
   </data>
 </root>
