Updates to layout and to database

--- a/Web/Resources/BreadcrumbResources.fr.resx
+++ b/Web/Resources/BreadcrumbResources.fr.resx
@@ -127,10 +127,10 @@
     <value>Collège technique</value>
   </data>
   <data name="Computer" xml:space="preserve">
-    <value>Systèmes informatiques</value>
+    <value>Technologies de l'information</value>
   </data>
   <data name="ComputerScience" xml:space="preserve">
-    <value>Sciences informatiques</value>
+    <value>Technologies de l'information</value>
   </data>
   <data name="Cook" xml:space="preserve">
     <value>Cuisinier</value>
