--- a/Web/Resources/BreadcrumbResources.resx
+++ b/Web/Resources/BreadcrumbResources.resx
@@ -127,10 +127,10 @@
     <value>Technical College</value>
   </data>
   <data name="Computer" xml:space="preserve">
-    <value>Computer Systems</value>
+    <value>Information Technology</value>
   </data>
   <data name="ComputerScience" xml:space="preserve">
-    <value>Computer Sciences</value>
+    <value>Information Technology</value>
   </data>
   <data name="Cook" xml:space="preserve">
     <value>Cook</value>
