--- a/Web/Resources/PageNames.resx
+++ b/Web/Resources/PageNames.resx
@@ -151,7 +151,7 @@
     <value>Ordinateurs</value>
   </data>
   <data name="ComputerScience" xml:space="preserve">
-    <value>SciencesInformatiques</value>
+    <value>TechnologiesdelInformation</value>
   </data>
   <data name="Contact" xml:space="preserve">
     <value>Contacter</value>
