--- a/Web/Resources/Pages/Student/College/Shoreside/Index.fr.resx
+++ b/Web/Resources/Pages/Student/College/Shoreside/Index.fr.resx
@@ -127,7 +127,7 @@
     <value>Collège de la Garde côtière canadienne</value>
   </data>
   <data name="computer" xml:space="preserve">
-    <value>Ordinateurs</value>
+    <value>Technologies de l'information</value>
   </data>
   <data name="cook" xml:space="preserve">
     <value>Cuisinier</value>
