--- a/Web/Resources/Pages/Student/College/Shoreside/Index.resx
+++ b/Web/Resources/Pages/Student/College/Shoreside/Index.resx
@@ -127,7 +127,7 @@
     <value>Canadian Coast Guard College</value>
   </data>
   <data name="computer" xml:space="preserve">
-    <value>Computer Systems</value>
+    <value>Information Technology</value>
   </data>
   <data name="cook" xml:space="preserve">
     <value>Cook</value>
