--- a/Web/Resources/Pages/Student/HighSchool/Shoreside/Index.fr.resx
+++ b/Web/Resources/Pages/Student/HighSchool/Shoreside/Index.fr.resx
@@ -124,7 +124,7 @@
     <value>Collège de la Garde côtière canadienne</value>
   </data>
   <data name="computer" xml:space="preserve">
-    <value>Ordinateurs</value>
+    <value>Technologies de l'information</value>
   </data>
   <data name="High School" xml:space="preserve">
     <value>École secondaire</value>
