--- a/Web/Resources/Pages/Student/HighSchool/Shoreside/Index.resx
+++ b/Web/Resources/Pages/Student/HighSchool/Shoreside/Index.resx
@@ -124,7 +124,7 @@
     <value>Canadian Coast Guard College</value>
   </data>
   <data name="computer" xml:space="preserve">
-    <value>Computer</value>
+    <value>Information Technology</value>
   </data>
   <data name="link" xml:space="preserve">
     <value>https://www.ccg-gcc.gc.ca/college/index-eng.html</value>
