--- a/Web/Resources/Pages/Student/University/Shoreside/Index.fr.resx
+++ b/Web/Resources/Pages/Student/University/Shoreside/Index.fr.resx
@@ -127,7 +127,7 @@
     <value>Collège de la Garde côtière canadienne</value>
   </data>
   <data name="computer" xml:space="preserve">
-    <value>Sciences informatiques</value>
+    <value>Technologies de l'information</value>
   </data>
   <data name="economics" xml:space="preserve">
     <value>(y compris économie, sociologie, psychologie)</value>
