--- a/Web/Resources/Pages/Student/University/Shoreside/Index.resx
+++ b/Web/Resources/Pages/Student/University/Shoreside/Index.resx
@@ -127,7 +127,7 @@
     <value>Canadian Coast Guard College</value>
   </data>
   <data name="computer" xml:space="preserve">
-    <value>Computer Sciences</value>
+    <value>Information Technology</value>
   </data>
   <data name="economics" xml:space="preserve">
     <value>(including Economics, Sociology, Psychology)</value>
