--- a/Web/Resources/Pages/Student/College/Shoreside/Computer.fr.resx
+++ b/Web/Resources/Pages/Student/College/Shoreside/Computer.fr.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Computer" xml:space="preserve">
+    <value>Technologies de l'information</value>
+  </data>
   <data name="Home" xml:space="preserve">
     <value>Accueil</value>
   </data>
@@ -154,6 +157,6 @@
     <value>Collège technique</value>
   </data>
   <data name="title" xml:space="preserve">
-    <value>Collège - Côté rivage - Postes en systèmes informatiques</value>
+    <value>Collège - Côté rivage - Technologies de l'information</value>
   </data>
 </root>
