--- a/Web/Resources/Pages/Student/HighSchool/Shoreside/Computer.resx
+++ b/Web/Resources/Pages/Student/HighSchool/Shoreside/Computer.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Computer" xml:space="preserve">
+    <value>Information Technology</value>
+  </data>
   <data name="level" xml:space="preserve">
     <value>LEVEL</value>
   </data>
@@ -154,6 +157,6 @@
     <value>Shore side Positions</value>
   </data>
   <data name="title" xml:space="preserve">
-    <value>High School - Shore side - Computer System Positions</value>
+    <value>High School - Shore side - Information Technology</value>
   </data>
 </root>
