--- a/Web/Resources/Pages/Student/University/Shoreside/ComputerScience.resx
+++ b/Web/Resources/Pages/Student/University/Shoreside/ComputerScience.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Computer" xml:space="preserve">
+    <value>Information Technology</value>
+  </data>
+  <data name="ComputerScience" xml:space="preserve">
+    <value>Information Technology</value>
+  </data>
   <data name="level" xml:space="preserve">
     <value>LEVEL</value>
   </data>
@@ -145,6 +151,6 @@
     <value>Shore side Positions</value>
   </data>
   <data name="title" xml:space="preserve">
-    <value>University - Shore side - Computer Science</value>
+    <value>University - Shore side - Information Technology</value>
   </data>
 </root>
