--- a/Web/Resources/Pages/Index.fr.resx
+++ b/Web/Resources/Pages/Index.fr.resx
@@ -162,8 +162,11 @@
   <data name="RoP" xml:space="preserve">
     <value>Taux de rémunération</value>
   </data>
+  <data name="RoPlink" xml:space="preserve">
+    <value>https://www.tbs-sct.gc.ca/pubs_pol/hrpubs/coll_agre/rates-taux-fra.asp</value>
+  </data>
   <data name="RoPtext" xml:space="preserve">
-    <value>Pour consulter les taux de rémunération pour toutes les classifications énumérées dans l'&lt;abbr title="Outil de compétences professionnelles"&gt;OCP&lt;/abbr&gt;, visitez le site web du &lt;a href="https://www.tbs-sct.gc.ca/pubs_pol/hrpubs/coll_agre/rates-taux-fra.asp" target="_blank"&gt;Secrétariat du Conseil du Trésor du Canada&lt;/a&gt;&amp;nbsp;&lt;span style="color:#000; font-size:14px" class="glyphicon glyphicon-new-window"&gt;&lt;/span&gt;.</value>
+    <value>Taux de rémunération pour toutes les classifications énumérées dans l'outil de compétences professionnelles.&amp;nbsp;&lt;span style="color:#000; font-size:14px" class="glyphicon glyphicon-new-window"&gt;&lt;/span&gt;</value>
   </data>
   <data name="services" xml:space="preserve">
     <value>Services et renseignements</value>
