--- a/Web/Resources/Pages/Overview.fr.resx
+++ b/Web/Resources/Pages/Overview.fr.resx
@@ -126,12 +126,15 @@
   <data name="Competencies" xml:space="preserve">
     <value>Compétences</value>
   </data>
+  <data name="CompLevel" xml:space="preserve">
+    <value>Niveaux de compétence</value>
+  </data>
   <data name="CompText" xml:space="preserve">
-    <value>&lt;p&gt;Nous avons compilé ces renseignements à partir des compétences mentionnées dans toutes les offres d’emploi des dernières années. Chaque compétence a un niveau minimum requis pour le poste. Les compétences peuvent évoluer au fur et à mesure que les exigences des postes changent au sein de la Garde côtière.&lt;/p&gt;
-&lt;p&gt;Nous avons divisé les compétences liées aux postes en trois sections :&lt;/p&gt;
-&lt;ul&gt;&lt;li&gt;Les éléments de connaissance sont une compréhension pratique ou théorique d’un sujet. Il s’agit des renseignements dont vous avez besoin (à partir de votre expérience ou de vos études) pour réussir dans le poste.&lt;/li&gt;
-&lt;li&gt;Les éléments techniques décrivent les capacités d’appliquer les connaissances pour exécuter efficacement le travail.&lt;/li&gt;
-&lt;li&gt;Les éléments de comportement sont les comportements ou les attitudes nécessaires pour tout emploi au sein de la Garde côtière canadienne. Nous en avons déterminé sept (7) et inclus un niveau de compétence requis pour chaque poste.&lt;/li&gt;&lt;/ul&gt;</value>
+    <value>&lt;p&gt;Chaque poste comprend une répartition des compétences requises. Ces informations sont compilées à partir des compétences incluses dans les offres d'emploi pour ce poste, au cours des dernières années. Chaque compétence correspond à un niveau de compétence minimum requis pour le poste. Les compétences professionnelles sont divisées en trois sections :&lt;/p&gt;
+
+&lt;ol&gt;&lt;li&gt;Les &lt;b&gt;éléments de connaissance&lt;/b&gt; sont une compréhension pratique ou théorique d’un sujet. Il s’agit des renseignements dont vous avez besoin (à partir de votre expérience ou de vos études) pour réussir dans le poste.&lt;/li&gt;
+&lt;li&gt;Les &lt;b&gt;éléments techniques&lt;/b&gt; décrivent les capacités d’appliquer les connaissances pour exécuter efficacement le travail.&lt;/li&gt;
+&lt;li&gt;Les &lt;b&gt;éléments de comportement&lt;/b&gt; sont les comportements ou les attitudes nécessaires pour tout emploi au sein de la &lt;abbr title="Garde côtière canadienne"&gt;GCC&lt;/abbr&gt;. Nous en avons déterminé sept (7) et inclus un niveau de compétence requis pour chaque poste.&lt;/li&gt;&lt;/ol&gt;&lt;p&gt;Les compétences peuvent évoluer à mesure que les exigences du poste changent au sein de la &lt;abbr title="Garde côtière canadienne"&gt;GCC&lt;/abbr&gt;.&lt;/p&gt;</value>
   </data>
   <data name="continue" xml:space="preserve">
     <value>Cliquez ici pour commencer</value>
@@ -143,11 +146,14 @@
     <value>Aperçu</value>
   </data>
   <data name="IntroText" xml:space="preserve">
-    <value>&lt;p&gt;L’outil de compétences professionnelles de la Garde côtière canadienne est un outil en ligne qui fournit des renseignements sur les exigences des postes dans l’ensemble de la Garde côtière. Il s’adresse aux employés actuels de la Garde côtière et aux personnes qui souhaiteraient travailler pour la Garde côtière canadienne. Pour les membres de la Garde côtière, l’outil vous permet de prendre en main votre perfectionnement professionnel.&lt;/p&gt;
-&lt;p&gt;Une fois que vous avez identifié un poste pouvant vous intéresser, l’outil vous permet de trouver des postes similaires au sein de la Garde côtière ou de comparer les exigences du poste à celles d’autres postes. Pour chaque poste, l’outil fournit :&lt;/p&gt;&lt;ul&gt;&lt;li&gt;une brève description;&lt;/li&gt;
-&lt;li&gt;les régions dans lesquelles on peut trouver ce poste;&lt;/li&gt;
-&lt;li&gt;les certifications requises pour le poste;&lt;/li&gt;
+    <value>&lt;p&gt;L’outil de compétences professionnelles (OCP) de la Garde côtière canadienne (GCC) est un outil en ligne qui fournit des renseignements sur les exigences des postes dans l’ensemble de la Garde côtière. Il s’adresse aux employés actuels de la &lt;abbr title="Garde côtière canadienne"&gt;GCC&lt;/abbr&gt;et aux personnes qui souhaiteraient travailler pour la &lt;abbr title="Garde côtière canadienne"&gt;GCC&lt;/abbr&gt;. Pour les membres de la &lt;abbr title="Garde côtière canadienne"&gt;GCC&lt;/abbr&gt;, l’outil vous permet de prendre en main votre perfectionnement professionnel.&lt;/p&gt;
+&lt;p&gt;Une fois que vous avez identifié un poste pouvant vous intéresser, l’outil vous permet de trouver des postes similaires au sein de la &lt;abbr title="Garde côtière canadienne"&gt;GCC&lt;/abbr&gt; ou de comparer les exigences du poste à celles d’autres postes. Pour chaque poste, l’outil fournit :&lt;/p&gt;&lt;ul&gt;&lt;li&gt;une brève description;&lt;/li&gt;
+&lt;li&gt;une liste des régions qui offrent le poste;&lt;/li&gt;
+&lt;li&gt;certifications requises;&lt;/li&gt;
 &lt;li&gt;une liste des compétences nécessaires ainsi que le niveau de compétence requis.&lt;/li&gt;&lt;/ul&gt;</value>
+  </data>
+  <data name="levels" xml:space="preserve">
+    <value>&lt;p&gt;Chaque compétence est attribué un niveau. Ces niveaux sont basés sur les connaissances et les compétences requises pour chaque poste.&lt;/p&gt;&lt;p&gt;Ces niveaux vont de 1 à 5 :&lt;/p&gt;&lt;ul&gt;&lt;li&gt;1 = &lt;b&gt;sensibilisation fondamentale&lt;/b&gt; (connaissance courante ou compréhension des techniques et concepts de base)&lt;/li&gt;&lt;li&gt;2 = &lt;b&gt;novice&lt;/b&gt; (un niveau d'expérience a été acquis; peut avoir besoin d'aide lors de l'exécution d'une tâche ou d'une compétence)&lt;/li&gt;&lt;li&gt;3 = &lt;b&gt;intermédiaire&lt;/b&gt; (capable d'accomplir avec succès les tâches nécessaires à cette compétence. Une certaine aide peut encore être nécessaire, mais peut habituellement effectuer la tâche de façon autonome)&lt;/li&gt;&lt;li&gt;4 = &lt;b&gt;avancé&lt;/b&gt; (effectue les actions associées à cette compétence sans aide. Capable de fournir de l'aide à d'autres collègues lorsque des questions surgissent au sujet de cette compétence)&lt;/li&gt;&lt;li&gt;5 = &lt;b&gt;expert&lt;/b&gt; (fournit des conseils, du dépannage et répond aux questions relatives à ce domaine d'expertise et au domaine dans lequel la compétence est utilisée)&lt;/li&gt;&lt;/ul&gt;</value>
   </data>
   <data name="Title" xml:space="preserve">
     <value>Aperçu de l'outil de compétences professionnelles</value>
